book-search: adjust spacing between cards

--- a/index.html
+++ b/index.html
@@ -41,21 +41,22 @@
         }
         .book-lists {
           display: block;
-          width: 980px;
+          width: 960px;
           margin: 0 auto;
         }
         .book-list {
           display: inline-block;
-          width: 490px;
+          width: 480px;
           float: left;
           vertical-align: top;
+          padding: 10px 0;
         }
         polymer-ui-card {
           display: inline-block;
-          width: 410px;
+          width: 420px;
           min-height: 195px;
           padding: 20px;
-          margin: 20px;
+          margin: 10px;
         }
         gb-book-info {
           display: block;
