--- a/index.html
+++ b/index.html
@@ -265,8 +265,6 @@
           width: 200px;
           -webkit-transition: left ease-in .1s;
           transition: left ease-out .1s;
-          -webkit-transition-property: left;
-          transition-property: left;
           background: #fff;
           z-index: 2;
         }
@@ -319,23 +317,19 @@
         .loading-icon[loading] {
           display: block;
         }
-        polymer-ui-menu-button ^^ polymer-ui-icon {
-          /* hack */
-          background-position: -72px -864px !important;
-        }
         [hidden] {
           visibility: hidden;
         }
       </style>
       
-      <polymer-ui-toolbar id="toolbar" offscreen="basement">
-        <polymer-ui-icon-button icon="menu" on-tap="{{toggleMenu}}" theme="polymer-ui-dark-theme"></polymer-ui-icon-button>
+      <polymer-ui-toolbar id="toolbar" offscreen="basement" theme="polymer-ui-light-theme">
+        <polymer-ui-icon-button icon="menu" on-tap="{{toggleMenu}}" ></polymer-ui-icon-button>
         <div flex></div>
         <polymer-ui-field hidden?="{{viewSelected}}">
-          <polymer-ui-icon icon="search" theme="polymer-ui-light-theme"></polymer-ui-icon>
+          <polymer-ui-icon icon="search"></polymer-ui-icon>
           <input id="input" placeholder="Search Books" value="{{query}}" flex x-webkit-speech on-change="{{search}}">
         </polymer-ui-field>
-        <polymer-ui-menu-button selected="{{bookTypeSelected}}" halign="right" icon="filter" theme="polymer-ui-light-theme" hidden?="{{viewSelected}}">
+        <polymer-ui-menu-button selected="{{bookTypeSelected}}" halign="right" icon="filter" hidden?="{{viewSelected}}">
           <polymer-ui-menu-item name="all" label="All"></polymer-ui-menu-item>
           <polymer-ui-menu-item name="books" label="Books"></polymer-ui-menu-item>
           <polymer-ui-menu-item name="magazines" label="Magazines"></polymer-ui-menu-item>
